Mentor tools: Add frontend for changing mentor load
Bug: T287917
Change-Id: Ia3225419cd8f2cfab1cb4404933753e50f99604b

--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -17,16 +17,23 @@
 		color: @wmui-color-base20;
 	}
 
-	.growthexperiments-mentor-dashboard-module-mentor-tools-status {
-		#growthexperiments-mentor-dashboard-mentor-tools-mentor-status-dropdown {
-			display: block;
-			padding-top: 10px;
-			width: 120px;
-		}
+	.oo-ui-dropdownWidget {
+		display: block;
+		padding-top: 10px;
+	}
 
-		#growthexperiments-mentor-dashboard-module-mentor-tools-status-away-message {
-			color: @wmui-color-base20;
-			.rel-font-size( @parentFontSize: 14px, @targetFontSize: 13px );
+	#growthexperiments-mentor-dashboard-module-mentor-tools-status-away-message {
+		color: @wmui-color-base20;
+		.rel-font-size( @parentFontSize: 14px, @targetFontSize: 13px );
+	}
+
+	.growthexperiments-mentor-dashboard-module-mentor-tools-mentor-weight {
+		position: relative;
+
+		#growthexperiments-mentor-dashboard-module-mentor-tools-mentor-weight-info-icon {
+			padding: 0;
+			margin: 0;
+			float: right;
 		}
 	}
 
