Suggested edits: open the first article from mobile task preview
 * Moved newcomer task token creation to server
 * Use default margin only in desktop modules to avoid
conflicts in mobile styles

Bug: T264460
Change-Id: I6cfe9a8897f0f8c0b9f09aa6ed056bffd669e774

--- a/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
@@ -9,7 +9,10 @@
 	color: @colorGray2;
 	padding: 16px;
 	.box-sizing( border-box );
-	margin: @homepageModuleMargin;
+
+	&.growthexperiments-homepage-module-desktop {
+		margin: @homepageModuleMargin;
+	}
 
 	.growthexperiments-homepage-module-header,
 	h2.growthexperiments-homepage-module-header {
