--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -121,21 +121,16 @@ body.mw-special-Homepage {
 			> .growthexperiments-homepage-module,
 			> a {
 				margin: 1em 0 0 0;
+				box-shadow: none;
 
-				> .growthexperiments-homepage-module {
-					margin: 0;
-					padding: 0 1em 1em 1em;
-					box-shadow: none;
+				h2.growthexperiments-homepage-module-section-header {
+					padding: 0;
+					margin-bottom: 0.625em;
 
-					h2.growthexperiments-homepage-module-section-header {
+					.growthexperiments-homepage-module-header-text {
+						font-size: 0.729em;
+						line-height: 1.429em;
 						padding: 0;
-						margin: 0.625em 0;
-
-						.growthexperiments-homepage-module-header-text {
-							font-size: 0.729em;
-							line-height: 1.429em;
-							padding: 0;
-						}
 					}
 				}
 			}
