Structured task: give users options for watchlist
TBD: Instrumentation

Bug: T289547
Change-Id: I0ba7e53b03346ecb1c8fe11b37d2077a0ead1e8e

--- a/modules/ext.growthExperiments.StructuredTask/addimage/AddImageSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/AddImageSaveDialog.less
@@ -50,16 +50,14 @@
 	&-copyrightWarning {
 		.rel-font-size-and-line-height( @parentFontSize: 16px, @targetFontSize: 13px, @targetLineHeight: 19.5px );
 		padding-bottom: 12px;
+	}
+
+	&-bodyContent {
 		border-bottom: 1px solid @wmui-color-base80;
 	}
 
 	&-copyrightWarning {
 		padding: 16px 0;
 		color: @wmui-color-base20;
-	}
-
-	.mw-ge-structuredTaskSaveDialog-copyrightwarning {
-		padding-bottom: 16px;
-		border-bottom: 1px solid @wmui-color-base80;
 	}
 }
