--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskSaveDialog.less
@@ -5,10 +5,18 @@
 	.ge-structuredTask-copyrightwarning {
 		margin: 16px 0 0;
 		color: @wmui-color-base20;
+		padding-bottom: 16px;
+
 		.rel-font-size-and-line-height( @parentFontSize: 14px, @targetFontSize: 12.4px, @targetLineHeight: 17px );
 
 		.ve-ui-mwMobileSaveDialog& {
 			.rel-font-size-and-line-height( @parentFontSize: 16px, @targetFontSize: 13px, @targetLineHeight: 19px );
 		}
+	}
+
+	&-watchlistCheckbox {
+		padding: 16px 0;
+		margin: 0;
+		border-top: 1px solid @wmui-color-base80;
 	}
 }
