--- a/modules/homepage/ext.growthExperiments.Homepage.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.less
@@ -89,6 +89,9 @@ body.mw-special-Homepage {
 		// Without this, overlays have incorrect widths on Firefox Android.
 		transform: translate( 0 );
 
+		// FIXME: #section_0 rule can be removed when I2ffdedd64414ffb3c6e441391a75fd6e744847a4
+		// has been in production for > 1 week.
+		#content .mw-first-heading,
 		#content #section_0 {
 			// Need !important to override the other !important in
 			// skins/MinervaNeue/skinStyles/mobile.special.styles/minerva.less
