--- a/modules/ext.growthExperiments.StructuredTask/MachineSuggestionsMode.less
+++ b/modules/ext.growthExperiments.StructuredTask/MachineSuggestionsMode.less
@@ -97,3 +97,15 @@
 		opacity: 0;
 	}
 }
+
+.mw-ge-addImage--overlay-shown {
+	&:before {
+		content: '';
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: rgba( 255, 255, 255, 0.5 );
+	}
+}
