Homepage: avoid invisible link click area on mobile
Bug: T297875
Change-Id: I74e040cbc9e418a1cc213171a4e29b552d8f4481

--- a/modules/homepage/ext.growthExperiments.Homepage.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.less
@@ -112,19 +112,23 @@ body.mw-special-Homepage {
 			}
 
 			> .growthexperiments-homepage-module,
-			> a > .growthexperiments-homepage-module {
+			> a {
 				margin: 1em 0 0 0;
-				padding: 0 1em 1em 1em;
-				box-shadow: none;
 
-				h2.growthexperiments-homepage-module-section-header {
-					padding: 0;
-					margin: 0.625em 0;
+				> .growthexperiments-homepage-module {
+					margin: 0;
+					padding: 0 1em 1em 1em;
+					box-shadow: none;
 
-					.growthexperiments-homepage-module-header-text {
-						font-size: 0.729em;
-						line-height: 1.429em;
+					h2.growthexperiments-homepage-module-section-header {
 						padding: 0;
+						margin: 0.625em 0;
+
+						.growthexperiments-homepage-module-header-text {
+							font-size: 0.729em;
+							line-height: 1.429em;
+							padding: 0;
+						}
 					}
 				}
 			}
