MentorTools: Add margin below weighting field
Bug: T287917
Change-Id: I78866b2340cb870f5a1e120f37c16b89c481c926

--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -29,6 +29,7 @@
 
 	.growthexperiments-mentor-dashboard-module-mentor-tools-mentor-weight {
 		position: relative;
+		margin-bottom: 1em;
 
 		#growthexperiments-mentor-dashboard-module-mentor-tools-mentor-weight-info-icon {
 			padding: 0;
