Add an image: desktop image inspector
* Update typography and border styles for desktop
* Show the image inspector after onboarding is closed
* Add additional padding to the footer links so that they aren't covered by the bottom fixed inspector header (when collapsed)

Bug: T298111
Change-Id: I3a44e83075648861d9087da68bce8b75353a7676

--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskToolbarDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskToolbarDialog.less
@@ -1,9 +1,10 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 @import '../homepage/ext.growthExperiments.variables.less';
 
+@navHeight: 48px;
+
 .mw-ge-structuredTaskToolbarDialog {
 	background: @wmui-color-base100;
-	@navHeight: 48px;
 
 	&.ve-ui-toolbarDialog-position-below {
 		border-top: 1px solid @wmui-color-base70;
@@ -48,5 +49,17 @@
 			margin-left: 0.5em;
 			opacity: 0.65;
 		}
+	}
+
+	&-headerButton {
+		cursor: pointer;
+	}
+}
+
+.mw-footer {
+	// Additional specificity to override default styles
+	.footer-places--with-mw-ge-structuredTaskToolbarDialog {
+		// Prevent the footer links from being covered when the toolbar dialog is collapsed on desktop
+		padding-bottom: @navHeight;
 	}
 }
