Add an image: update caption styles for desktop
Currently desktop and mobile use the same ceRecommendedImageNode class. If there are additional deviations between the two, it may make sense to create new platform-specific classes instead.

Bug: T298117
Change-Id: I7418e177a772c0fd9f0a4d2457fc66110b4f8db1

--- a/modules/ext.growthExperiments.StructuredTask/addimage/AddImageCaptionInfoDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/AddImageCaptionInfoDialog.less
@@ -1,10 +1,15 @@
 .mw-ge-addImageCaptionInfoDialog {
 	.mw-ge-addImageCaptionInfoDialog-list {
 		list-style: outside;
-		padding-left: 16px;
 	}
 
 	.mw-ge-addImageCaptionInfoDialog-dismiss-field {
 		margin: 24px 0;
+	}
+
+	&-mobile {
+		.mw-ge-addImageCaptionInfoDialog-list {
+			padding-left: 16px;
+		}
 	}
 }
