Add an image: hide edit mode toggle and show toolbar when submitting rejection
Bug: T295929
Change-Id: I126e079ebdf7f64f54fc1a6f24339be4908226a5

--- a/modules/ext.growthExperiments.StructuredTask/MachineSuggestionsMode.less
+++ b/modules/ext.growthExperiments.StructuredTask/MachineSuggestionsMode.less
@@ -99,10 +99,13 @@
 }
 
 .mw-ge-addImage--overlay-shown {
+	@toolbarHeight: 50px;
+
 	&:before {
 		content: '';
 		position: fixed;
-		top: 0;
+		// Show the toolbar (the overlay applies to the entire document not just the article content)
+		top: @toolbarHeight;
 		bottom: 0;
 		left: 0;
 		right: 0;
