Add an image: fix guidance content styles
Bug: T298742
Change-Id: I1feafde7d471b8bb698a3dfbf5425f49377a68b7

--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -278,7 +278,8 @@
 						background-color: @wmui-color-red90;
 					}
 
-					&-main {
+					&-main,
+					&-main-multiple {
 						line-height: 1.6;
 						color: @wmui-color-base10;
 
