Rename files in ext.growthExperiments.Homepage.styles
* Move mixins.less and variables.less into ext.growthExperiments.Homepage.styles directory

Bug: T289012
Change-Id: I3940e7b4583f82eabb0f408736707e14cbfcbf4b

--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -1,7 +1,7 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import '../homepage/ext.growthExperiments.variables.less';
-@import '../homepage/ext.growthExperiments.mixins.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../ext.growthExperiments.Homepage.styles/mixins.less';
 @import '../../lib/ooui/wikimedia-ui-base';
 
 .mw-ge-help-panel-processdialog {
