--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelPopup.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelPopup.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import '../homepage/ext.growthExperiments.variables.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
 
 @help-panel-position-bottom: 6em;
 
