--- a/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
@@ -1,7 +1,7 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import './ext.growthExperiments.mixins.less';
+@import 'mixins.less';
 
 .growthexperiments-homepage-module-impact {
 	&-activated .growthexperiments-homepage-module-body {
