--- a/modules/ext.growthExperiments.PostEdit/PostEdit.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEdit.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.mixins';
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../homepage/ext.growthExperiments.variables.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
 
 // The message box should float a fixed height above the window. Putting it inside the window
 // content area and then offsetting it seemed much easier than fighting with OOUI's window
