--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addlink/AddLinkOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addlink/AddLinkOnboardingContent.less
@@ -1,5 +1,5 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../homepage/ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .addlink-onboarding-content {
 	@mobileFontSize: 16px;
