--- a/modules/ext.growthExperiments.StructuredTask.desktop/addimage/AddImageDesktopSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask.desktop/addimage/AddImageDesktopSaveDialog.less
@@ -1,4 +1,4 @@
-@import '../../homepage/ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .mw-ge-addImageSaveDialog-desktop {
 	@desktopFontSize: 14px;
