--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskToolbarDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskToolbarDialog.less
@@ -1,5 +1,5 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../homepage/ext.growthExperiments.variables.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
 
 @navHeight: 48px;
 
