--- a/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageToolbarDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageToolbarDialog.less
@@ -1,6 +1,6 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../homepage/ext.growthExperiments.variables.less';
-@import '../../homepage/ext.growthExperiments.mixins';
+@import '../../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins';
 
 .mw-ge-recommendedImageToolbarDialog {
 	color: @wmui-color-base10;
