--- a/modules/homepage/ext.growthExperiments.Homepage.SuggestionGroupWidget.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.SuggestionGroupWidget.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.mixins';
 @import 'mediawiki.ui/variables';
-@import 'ext.growthExperiments.variables.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
 
 .mw-ge-suggestionGroupWidget {
 	&-headerRow {
