--- a/modules/homepage/suggestededits/ext.growthExperiments.SuggestedEdits.SmallTaskCard.less
+++ b/modules/homepage/suggestededits/ext.growthExperiments.SuggestedEdits.SmallTaskCard.less
@@ -1,7 +1,7 @@
 @import 'mediawiki.mixins';
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../ext.growthExperiments.variables.less';
-@import '../ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .mw-ge-small-task-card {
 	display: flex;
