--- a/modules/ui-components/MultiPaneDialog.less
+++ b/modules/ui-components/MultiPaneDialog.less
@@ -1,6 +1,6 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../homepage/ext.growthExperiments.variables.less';
-@import '../homepage/ext.growthExperiments.mixins.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .growthexperiments-multi-pane-dialog {
 	.oo-ui-window-head {
