--- a/modules/ext.growthExperiments.DonorSignupCampaign/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.DonorSignupCampaign/DonorSignupCampaign.less
@@ -4,7 +4,7 @@
 // (ResourceLoader does not seem to allow expressing dependencies for style modules.)
 
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../homepage/ext.growthExperiments.mixins.less';
+@import '../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .watermark {
 	display: none;
