--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import 'ext.growthExperiments.variables.less';
+@import 'variables.less';
 
 .growthexperiments-homepage-container {
 	.flex-display();
