--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -1,5 +1,5 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../homepage/ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 @import '../variables.less';
 
 // .growthexperiments-mentor-dashboard-container is here only to make the resulting selector
