--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -1,5 +1,5 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../homepage/ext.growthExperiments.mixins';
+@import '../../ext.growthExperiments.Homepage.styles/mixins';
 
 .mw-ge-recommendedImage {
 	position: relative;
