--- a/modules/ext.growthExperiments.StructuredTask/addlink/AddLinkSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addlink/AddLinkSaveDialog.less
@@ -1,5 +1,5 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../homepage/ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .ge-addlink-mwSaveDialog {
 	.ge-addlink-mwSaveDialog-summaryTable {
