--- a/modules/ext.growthExperiments.StructuredTask/addlink/RecommendedLinkRejectionDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addlink/RecommendedLinkRejectionDialog.less
@@ -1,6 +1,6 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 @import 'mediawiki.ui/variables.less';
-@import '../../homepage/ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 
 .mw-ge-recommendedLinkRejectionDialog {
 	.oo-ui-messageDialog-title {
