--- a/modules/homepage/ext.growthExperiments.Homepage.StartEditingDialog.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.StartEditingDialog.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import 'ext.growthExperiments.variables.less';
+@import '../ext.growthExperiments.Homepage.styles/variables.less';
 
 .mw-ge-startediting-dialog {
 	.growthexperiments-homepage-desktop & {
