--- a/modules/homepage/suggestededits/ext.growthExperiments.Homepage.SuggestedEdits.TaskExplanation.less
+++ b/modules/homepage/suggestededits/ext.growthExperiments.Homepage.SuggestedEdits.TaskExplanation.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables.less';
 @import 'mediawiki.mixins.less';
-@import '../ext.growthExperiments.variables.less';
+@import '../../ext.growthExperiments.Homepage.styles/variables.less';
 
 .suggested-edits-taskexplanation-difficulty-and-time,
 .suggested-edits-taskexplanation-additional-info {
