--- a/modules/homepage/suggestededits/ext.growthExperiments.Homepage.TaskTypeSelectionWidget.less
+++ b/modules/homepage/suggestededits/ext.growthExperiments.Homepage.TaskTypeSelectionWidget.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables.less';
-@import '../ext.growthExperiments.variables.less';
-@import '../ext.growthExperiments.mixins.less';
+@import '../../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
 @import '../../lib/ooui/wikimedia-ui-base';
 
 .mw-ge-homepage-taskTypeSelectionWidget {
