--- a/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageViewer.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageViewer.less
@@ -18,7 +18,7 @@
 	}
 
 	.mw-ge-recommendedImageViewer-image {
-		width: 100%;
+		max-height: 100%;
 		margin: 0 auto;
 		background: url( ../../../images/checker.png ) repeat;
 	}
