--- a/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables.less';
 @import 'mediawiki.mixins.less';
-@import '../../ext.growthExperiments.Homepage.styles/variables.less';
+@import 'variables.less';
 
 .suggested-edits-taskexplanation-difficulty-and-time,
 .suggested-edits-taskexplanation-additional-info {
@@ -175,7 +175,7 @@
 		width: 64px;
 		height: 64px;
 		// Image URLs are relative to the current CSS
-		background-image: url( ../../../images/suggestededits/Topic-general-64w.svg );
+		background-image: url( ../../images/suggestededits/Topic-general-64w.svg );
 		background-repeat: no-repeat;
 	}
 }
