Help panel: prevent guidance button floating over notifications mobile
Bug: T291603
Change-Id: I7a16210ed09cd1578f64a7500d8425a22e1a99d1

--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
@@ -2,7 +2,6 @@
 	position: fixed;
 	bottom: 2em;
 	right: 1em;
-	z-index: 2;
 	animation: help-panel-slidein 800ms;
 
 	&.animate-out {
@@ -51,4 +50,8 @@
 	right: 1em;
 	bottom: 1em;
 	z-index: 2;
+
+	.secondary-navigation-enabled & {
+		z-index: 0;
+	}
 }
