--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -2,6 +2,13 @@
 @import 'mediawiki.mixins';
 @import 'variables.less';
 
+.stop-scrolling {
+	height: 100%;
+	width: 100%;
+	overflow-y: hidden;
+	position: fixed;
+}
+
 .growthexperiments-homepage-container {
 	.flex-display();
 }
