Add an image: update onboarding images for desktop
Bug: T298109
Change-Id: Ib9573a6a93cce7ce26bf6dea9bba05b2a8ebe4e4

--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addimage/AddImageOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addimage/AddImageOnboardingContent.less
@@ -18,6 +18,22 @@
 		background-image: url( ../../../images/addimage/onboarding-image4-ltr.svg );
 	}
 
+	&-image1--desktop {
+		background-image: url( ../../../images/addimage/desktop-onboarding-image1-ltr.svg );
+	}
+
+	&-image2--desktop {
+		background-image: url( ../../../images/addimage/desktop-onboarding-image2-ltr.svg );
+	}
+
+	&-image3--desktop {
+		background-image: url( ../../../images/addimage/desktop-onboarding-image3-ltr.svg );
+	}
+
+	&-image4--desktop {
+		background-image: url( ../../../images/addimage/desktop-onboarding-image4-ltr.svg );
+	}
+
 	&-paragraph {
 		margin-top: 8px;
 
